--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
 click==8.1.7
+DAWG-Python==0.7.2
+docopt==0.6.2
 joblib==1.4.2
 nltk==3.9.1
 numpy==2.1.3
 pandas==2.2.3
+pymorphy2==0.9.1
+pymorphy2-dicts-ru==2.4.417127.4579844
 python-dateutil==2.9.0.post0
 pytz==2024.2
 regex==2024.11.6
@@ -12,3 +16,4 @@ six==1.16.0
 threadpoolctl==3.5.0
 tqdm==4.67.0
 tzdata==2024.2
+xgboost==2.1.2
